--- a/.config/alacritty/alacritty.yml
+++ b/.config/alacritty/alacritty.yml
@@ -181,8 +181,8 @@ draw_bold_text_with_bright_colors: true
 colors:
   # Default colors
   primary:
-    background: '#282c34'
-    foreground: '#abb2bf'
+    background: '#2e3440' #'#282c34'
+    foreground: '#d7dde6' #'#abb2bf'
 
     # Bright and dim foreground colors
     #
@@ -252,25 +252,25 @@ colors:
 
   # Normal colors
   normal:
-    black:   '#282828'
-    red:     '#e06c75'
-    green:   '#97c278'
-    yellow:  '#e5c07b'
-    blue:    '#61afef'
-    magenta: '#c678dd'
-    cyan:    '#56b6c2'
-    white:   '#abb2bf'
+    black:   '#3b4252'
+    red:     '#bf616a'
+    green:   '#a3be8c'
+    yellow:  '#ebcb8b'
+    blue:    '#81a1c1'
+    magenta: '#b48ead'
+    cyan:    '#88c0d0'
+    white:   '#e5e9f0'
 
   # Bright colors
   bright:
-    black:   '#353535'
-    red:     '#e48189'
-    green:   '#a5ca8a'
-    yellow:  '#e9ca90'
-    blue:    '#78bbf1'
-    magenta: '#cf8ce2'
-    cyan:    '#69bec9'
-    white:   '#ffffff'
+    black:   '#4c566a'
+    red:     '#c6727a'
+    green:   '#adc599'
+    yellow:  '#edd198'
+    blue:    '#8fabc8'
+    magenta: '#bc9ab6'
+    cyan:    '#95c7d5'
+    white:   '#fdfdfd'
 
   # Dim colors
   #
